fix: fixed channel sidebar on mobile

--- a/src/pages/settings/Settings.module.scss
+++ b/src/pages/settings/Settings.module.scss
@@ -199,6 +199,12 @@
             margin: 14px 0;
         }
 
+        /*a {
+            &:hover {
+                text-decoration: underline;
+            }
+        }*/
+
         h1 {
             margin: 0;
             line-height: 1rem;
